--- a/app/src/main/res/layout/fragment_temps_centiemes.xml
+++ b/app/src/main/res/layout/fragment_temps_centiemes.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -29,12 +31,12 @@
                     android:layout_height="36dp"
                     android:gravity="center_vertical"
                     android:text="Heures minutes --> Heures centièmes"
-                    android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <EditText
@@ -78,31 +80,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
-
-                    <ImageButton
-                        android:id="@+id/imageButtonCalcul1"
-                        android:layout_width="120dp"
-                        android:layout_height="50dp"
-                        android:layout_marginRight="30dp"
-                        android:cropToPadding="true"
-                        android:src="@drawable/ic_baseline_arrow_right_24" />
 
                     <TextView
                         android:id="@+id/etKilometres"
                         android:layout_width="150dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="50dp"
                         android:background="@drawable/bg_rectangle_order"
-                        android:gravity="center"
-                        tools:ignore="SpeakableTextPresentCheck" />
+                        android:gravity="center"/>
                 </LinearLayout>
-
-                <View
-                    android:id="@+id/divider"
-                    android:layout_width="match_parent"
-                    android:layout_height="3dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@color/blue" />
 
                 <TextView
                     android:id="@+id/textView15"
@@ -111,12 +98,12 @@
                     android:layout_marginTop="20dp"
                     android:gravity="center_vertical"
                     android:text="Heures centièmes --> Heures minutes "
-                    android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <EditText
@@ -126,8 +113,7 @@
                         android:background="@drawable/bg_rectangle_order"
                         android:gravity="center"
                         android:inputType="numberDecimal"
-                        android:maxLength="8"
-                        tools:ignore="SpeakableTextPresentCheck" />
+                        android:maxLength="8"/>
 
                     <ImageButton
                         android:id="@+id/imageButtonDelete2"
@@ -141,20 +127,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
-
-                    <ImageButton
-                        android:id="@+id/imageButtonCalcul2"
-                        android:layout_width="120dp"
-                        android:layout_height="50dp"
-                        android:layout_marginRight="30dp"
-                        android:cropToPadding="true"
-                        android:src="@drawable/ic_baseline_arrow_right_24" />
 
                     <TextView
                         android:id="@+id/tvResultatHeure2"
                         android:layout_width="70dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="50dp"
                         android:background="@drawable/bg_rectangle_order"
                         android:gravity="center" />
 
@@ -176,16 +155,41 @@
                         android:gravity="center" />
 
                 </LinearLayout>
+
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
+                    android:layout_weight="1"
                     android:paddingTop="40dp"
                     android:paddingBottom="40dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/image" />
+                    app:srcCompat="@drawable/img_2" />
+
+                <TextView
+                    android:id="@+id/textView38"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp" />
 
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/publisherAdView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="bottom"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id1" />
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
