--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -20,7 +20,7 @@
             android:id="@+id/imageView21"
             android:layout_width="match_parent"
             android:layout_height="180dp"
-            app:srcCompat="@drawable/image" />
+            app:srcCompat="@drawable/img_2" />
 
         <TextView
             android:id="@+id/textView21"
