--- a/app/src/main/res/layout/expandable_semaine_jour1.xml
+++ b/app/src/main/res/layout/expandable_semaine_jour1.xml
@@ -52,7 +52,7 @@
                     android:src="@drawable/ic_baseline_access_time_24" />
 
                 <TextView
-                    android:id="@+id/tvHeure1"
+                    android:id="@+id/tvHeureDebut"
                     android:layout_width="70dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_rectangle_order"
@@ -89,7 +89,7 @@
                     android:src="@drawable/ic_baseline_calendar_today_24" />
 
                 <TextView
-                    android:id="@+id/tvLongueurDispo"
+                    android:id="@+id/tvDateDebut"
                     android:layout_width="100dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_rectangle_order"
