--- a/app/src/main/res/layout/fragment_calculatrice_temps.xml
+++ b/app/src/main/res/layout/fragment_calculatrice_temps.xml
@@ -9,6 +9,22 @@
     android:padding="0dp"
     tools:context=".CalculatriceTemps">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:text="Développement en cours"
+            android:textColor="@color/colorAccent"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
     <TableLayout
         android:id="@+id/tableLayout"
         android:layout_width="0dp"
@@ -203,6 +219,8 @@
 
         </TableRow>
     </TableLayout>
+
+
 
     <ImageButton
         android:id="@+id/button_backspace"
