--- a/app/src/main/res/layout/fragment_palettes.xml
+++ b/app/src/main/res/layout/fragment_palettes.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
@@ -58,6 +60,7 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:gravity="center_horizontal"
                         android:orientation="horizontal">
 
                         <EditText
@@ -65,9 +68,9 @@
                             android:layout_width="150dp"
                             android:layout_height="50dp"
                             android:background="@drawable/bg_rectangle_order"
+                            android:gravity="center"
                             android:inputType="numberDecimal"
                             android:maxLength="8"
-                            android:gravity="center"
                             tools:ignore="SpeakableTextPresentCheck" />
 
                         <ImageButton
@@ -92,24 +95,27 @@
                 <RadioGroup
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/radioButton11"
-                        android:layout_width="match_parent"
+                        android:layout_width="140dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:checked="true"
                         android:ems="6"
+                        android:gravity="center_vertical"
                         android:minHeight="48dp"
                         android:text="80 x 120 cm" />
 
                     <RadioButton
                         android:id="@+id/radioButton9"
-                        android:layout_width="match_parent"
+                        android:layout_width="140dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:ems="16"
+                        android:gravity="center_vertical"
                         android:minHeight="48dp"
                         android:text="100 x 120 cm" />
                 </RadioGroup>
@@ -127,24 +133,16 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <ImageButton
-                        android:id="@+id/imageButtonCalcul"
-                        android:layout_width="120dp"
-                        android:layout_height="50dp"
-                        android:layout_marginRight="30dp"
-                        android:cropToPadding="true"
-                        android:src="@drawable/ic_baseline_arrow_right_24" />
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
+                        android:gravity="center_horizontal"
                         android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/tvNombrePalettes"
                             android:layout_width="150dp"
-                            android:layout_height="match_parent"
-                            android:layout_marginRight="6dp"
+                            android:layout_height="50dp"
                             android:background="@drawable/bg_rectangle_order"
                             android:gravity="center"
                             tools:ignore="SpeakableTextPresentCheck" />
@@ -179,14 +177,39 @@
                     android:id="@+id/imageView2"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
+                    android:layout_weight="1"
                     android:paddingTop="40dp"
                     android:paddingBottom="40dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/image" />
+                    app:srcCompat="@drawable/img_2" />
+
+                <TextView
+                    android:id="@+id/textView41"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp" />
 
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
 
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/publisherAdView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="bottom"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id1" />
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
