--- a/app/src/main/res/layout/fragment_reglementation.xml
+++ b/app/src/main/res/layout/fragment_reglementation.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,10 +12,13 @@
 
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="6dp"
+        tools:layout_editor_absoluteY="6dp">
 
 
         <LinearLayout
@@ -54,117 +59,150 @@
                     android:id="@+id/conduite"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:title="Conduite continue"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_testdrive"
                     app:inner_view="@layout/expandable_conduite_continue"
-                    app:expandOnClick="true"/>
+                    app:title="Conduite continue" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/pause"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    app:title="Pause conduite continue"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_baseline_motion_photos_paused_24"
                     app:inner_view="@layout/expandable_pause_cc"
-                    app:expandOnClick="true"/>
+                    app:title="Pause conduite continue" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/conduitejournaliere"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    app:title="Conduite journaliere"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_testdrive"
                     app:inner_view="@layout/expandable_conduite_journaliere"
-                    app:expandOnClick="true"/>
+                    app:title="Conduite journaliere" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/conduitehebdo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    app:title="Conduite Hebdomadaire"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_testdrive"
                     app:inner_view="@layout/expandable_conduite_hebdomadaire"
-                    app:expandOnClick="true"/>
+                    app:title="Conduite Hebdomadaire" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/conduitebihebdo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    app:title="Conduite sur 2 semaines"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_testdrive"
                     app:inner_view="@layout/expandable_conduite_bihebdo"
-                    app:expandOnClick="true"/>
+                    app:title="Conduite sur 2 semaines" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/reposjournalier"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    app:title="Repos journalier"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_repos"
                     app:inner_view="@layout/expandable_repos_journalier"
-                    app:expandOnClick="true"/>
+                    app:title="Repos journalier" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/reposjournalierfractionne"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    app:title="Repos journalier fractionné"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_repos"
                     app:inner_view="@layout/expandable_repos_journalier_fraction"
-                    app:expandOnClick="true"/>
+                    app:title="Repos journalier fractionné" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/reposhebo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    app:title="Repos hebdomadaire"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_repos"
                     app:inner_view="@layout/expandable_repos_hebdo"
-                    app:expandOnClick="true"/>
+                    app:title="Repos hebdomadaire" />
+
                 <TextView
                     android:id="@+id/textView18"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
-                    android:paddingLeft="6dp"
                     android:gravity="center_vertical"
+                    android:paddingLeft="6dp"
                     android:text="Réglementation Sociale Française"
                     android:textStyle="bold" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/servicejournalier"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:title="Service journalier"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_service"
                     app:inner_view="@layout/expandable_service_journalier"
-                    app:expandOnClick="true"/>
+                    app:title="Service journalier" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/tempsPause"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    app:title="Temps de pause"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_repos"
                     app:inner_view="@layout/expandable_temps_pause"
-                    app:expandOnClick="true"/>
+                    app:title="Temps de pause" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/serviceHebdo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    app:title="Service hebdomadaire"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_service"
                     app:inner_view="@layout/expandable_service_hebdo"
-                    app:expandOnClick="true"/>
+                    app:title="Service hebdomadaire" >
+
+
+                </com.alespero.expandablecardview.ExpandableCardView>
                 <TextView
-                    android:id="@+id/textView181"
+                    android:id="@+id/textView113"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:gravity="center_vertical"
                     android:text=""
-                    android:textStyle="bold" />
+                    android:textColor="@color/blue"
+                    android:textSize="20sp" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-</LinearLayout>
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/publisherAdView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="bottom"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id1" />
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
