--- a/app/src/main/res/layout/fragment_vitesse_moyenne.xml
+++ b/app/src/main/res/layout/fragment_vitesse_moyenne.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,22 +14,6 @@
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView13"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:gravity="center"
-                android:text="Vitesse moyenne"
-                android:textColor="@color/blue"
-                android:textSize="20sp" />
-
-        </LinearLayout>
 
         <ScrollView
             android:layout_width="match_parent"
@@ -49,6 +35,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <EditText
@@ -81,6 +68,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <EditText
@@ -130,23 +118,16 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
-
-                    <ImageButton
-                        android:id="@+id/imageButtonCalcul"
-                        android:layout_width="120dp"
-                        android:layout_height="50dp"
-                        android:layout_marginRight="30dp"
-                        android:cropToPadding="true"
-                        android:src="@drawable/ic_baseline_arrow_right_24" />
 
                     <TextView
                         android:id="@+id/tvResultat"
                         android:layout_width="150dp"
-                        android:layout_height="match_parent"
-                        android:textStyle="bold"
+                        android:layout_height="50dp"
                         android:background="@drawable/bg_rectangle_order"
-                        android:gravity="center" />
+                        android:gravity="center"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -154,11 +135,36 @@
                     android:id="@+id/imageView2"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
+                    android:layout_weight="1"
                     android:paddingTop="40dp"
                     android:paddingBottom="40dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@drawable/image" />
+                    app:srcCompat="@drawable/img_2" />
+
+                <TextView
+                    android:id="@+id/textView40"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/publisherAdView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="bottom"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id1" />
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
