--- a/app/src/main/res/layout/expandable_conduite_hebdomadaire.xml
+++ b/app/src/main/res/layout/expandable_conduite_hebdomadaire.xml
@@ -13,11 +13,16 @@
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:padding="6dp"
             android:text="Temps de conduite hebdomadaire : \n56 Heures par semaine"
             android:textSize="14sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView50"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
