--- a/app/src/main/res/layout/expandable_repos_hebdo.xml
+++ b/app/src/main/res/layout/expandable_repos_hebdo.xml
@@ -13,11 +13,16 @@
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
-            android:layout_height="85dp"
+            android:layout_height="wrap_content"
             android:padding="6dp"
             android:text="Période de repos ininterrompue de 56 heures obligatoire après 6 amplitudes de 24 heures.\nPeut être réduit à 24h00 une fois entre 2 repos normaux."
             android:textSize="14sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView47"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
 
     </LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
