--- a/app/src/main/res/layout/expandable_repos_journalier_fraction.xml
+++ b/app/src/main/res/layout/expandable_repos_journalier_fraction.xml
@@ -13,11 +13,16 @@
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
-            android:layout_height="85dp"
+            android:layout_height="wrap_content"
             android:padding="6dp"
             android:text="Par période de 24h :\n3h00 ininterrompues puis\n9h00 ininterrompues. \n(compte comme un repos normal)"
             android:textSize="14sp"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textView45"
+            android:layout_width="match_parent"
+            android:layout_height="100dp" />
 
     </LinearLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
