--- a/app/src/main/res/layout/fragment_reglementation.xml
+++ b/app/src/main/res/layout/fragment_reglementation.xml
@@ -16,9 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="6dp"
-        tools:layout_editor_absoluteY="6dp">
+        android:orientation="vertical">
 
 
         <LinearLayout
