--- a/app/src/main/res/layout/fragment_repos_hebdo2.xml
+++ b/app/src/main/res/layout/fragment_repos_hebdo2.xml
@@ -175,24 +175,32 @@
 
                 <TextView
                     android:id="@+id/tvResultatDifference"
-                    android:layout_width="match_parent"
-                    android:layout_height="36dp"
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="6dp"
+                    android:background="@drawable/bg_rectangle_order"
                     android:gravity="center_horizontal|center_vertical"
+                    android:padding="10dp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvBilan"
                     android:layout_width="match_parent"
-                    android:layout_height="36dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="6dp"
+                    android:background="@drawable/bg_rectangle_order"
                     android:gravity="center_vertical"
+                    android:padding="10dp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/textView10"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingTop="10dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_rectangle_order"
                     android:gravity="center_vertical"
+                    android:padding="10dp"
                     android:text="la réduction est compensée par une période de repos équivalente prise en bloc avant la fin de la troisième semaine suivant la semaine en question."
                     android:textStyle="bold" />
 
