--- a/app/src/main/res/layout/fragment_temps_trajet.xml
+++ b/app/src/main/res/layout/fragment_temps_trajet.xml
@@ -133,6 +133,14 @@
 
                 </LinearLayout>
 
+                <TextView
+                    android:id="@+id/tvTempsPause"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center_vertical"
+                    android:textStyle="bold" />
+
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="match_parent"
